--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
+    <div class="gallery">
+      <!-- Карточки изображений -->
+    </div>
     <form class="search-form" id="search-form">
       <input
         type="text"
@@ -15,7 +18,10 @@
         placeholder="Search images..."
       />
       <button type="submit">Search</button>
+      <button type="button" class="load-more">Load more</button>
     </form>
+
     <script type="module" src="./index.js"></script>
+    <skript type="module" src="./fetchImages.js"></skript>
   </body>
 </html>
