--- a/src/index.html
+++ b/src/index.html
@@ -19,13 +19,8 @@
     <div class="gallery">
       <!-- Карточки изображений -->
     </div>
-    <button type="button" class="load-more" data-action="load-more">
-      <span
-        class="spinner-border spinner-border-sm spinner is-hidden"
-        role="status"
-        aria-hidden="true"
-      ></span
-      ><span class="label">Load more</span>
+    <button type="button" class="button" data-action="load-more">
+      <span class="label">Load more</span>
     </button>
     <script type="module" src="./index.js"></script>
     <skript type="module" src="./fetchImages.js"></skript>
